[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/LevelManager/interface/node_manager.gd" type="Script" id=1]
[ext_resource path="res://addons/LevelManager/interface/confirmation_dialog.tscn" type="PackedScene" id=2]

[node name="LevelManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 128, 208 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0

[node name="Titulos" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 14.0
alignment = 1

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Titulos"]
margin_right = 115.0
margin_bottom = 14.0
size_flags_horizontal = 2
text = "Gestor de Niveles"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 22.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Config" type="Tabs" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 52.0

[node name="ConstLabels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer"]
margin_right = 165.0
margin_bottom = 52.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/ConstLabels"]
margin_right = 165.0
margin_bottom = 24.0
size_flags_vertical = 3
text = "Archivo de configuracion: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/ConstLabels"]
margin_top = 33.0
margin_right = 165.0
margin_bottom = 47.0
size_flags_vertical = 6
text = "Archivo de niveles: "

[node name="EditLabel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer"]
margin_left = 169.0
margin_right = 937.0
margin_bottom = 52.0
size_flags_horizontal = 7
size_flags_vertical = 4
alignment = 1

[node name="ConfigLabelEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/EditLabel"]
margin_right = 768.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://addons/LevelManager/interface/config_data.tres"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvlLabelEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/EditLabel"]
margin_top = 28.0
margin_right = 768.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "res://levels.tres"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer"]
margin_left = 941.0
margin_top = 3.0
margin_right = 1008.0
margin_bottom = 49.0
size_flags_vertical = 4

[node name="ToolButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons"]
margin_right = 67.0
margin_bottom = 20.0
disabled = true
text = "Abrir"

[node name="LevelFile" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 24.0
margin_right = 67.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons/LevelFile"]
margin_right = 43.0
margin_bottom = 22.0
text = "Abrir"

[node name="CreateFileButton" type="ToolButton" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons/LevelFile"]
margin_left = 47.0
margin_right = 67.0
margin_bottom = 22.0
text = "+"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer"]
margin_top = 56.0
margin_right = 1008.0
margin_bottom = 60.0

[node name="AddLvlButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer"]
margin_left = 450.0
margin_top = 64.0
margin_right = 558.0
margin_bottom = 84.0
size_flags_horizontal = 4
text = "AÃ±adir un nivel"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Abrir un Archivo"
mode = 0
filters = PoolStringArray( "*.tres ; Godot Resource File", "*.res ; Godot Binary Resource File" )

[node name="ConfirmationDialog" parent="." instance=ExtResource( 2 )]
[connection signal="draw" from="." to="." method="_on_LevelManager_draw"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons/LevelFile/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/HBoxContainer/Buttons/LevelFile/CreateFileButton" to="." method="_on_CreateFileButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Config/VBoxContainer/AddLvlButton" to="." method="_on_AddLvlButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
